# npamp_protocol

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  IANA_ALPN_n-pamp-2_registration_request.md  LICENSE  LINEAGE.md  MAINTAINERS.md  MANIFEST.sha256  NOTICE  PIN.json  README.md  SECURITY.md  TRADEMARKS.md  draft-bubblefish-npamp-00.md  llms-full.txt  llms.txt  mkdocs.yml  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  conformance_failure.yml  (+3 more)
.shippable/: config.json  spec-parity-audit.ps1  spec-parity.json
decisions/: 0001-record-architecture-decisions.md  0003-profiles-share-one-wire-format-and-construction.md  0004-open-editions-publish-only-public-draft-primitives.md  0005-align-x25519mlkem768-combiner-to-ml-kem-first.md  0006-fix-the-1-5-rtt-handshake-binding.md  0007-kem-wire-kat-anchor-keygen-x25519-order-defer-decaps-ss.md  0008-key-schedule-kat-via-rfc8448-validated-oracle.md  0009-transcript-kat-independent-byte-constructor-fips180-anchor.md  0010-finished-kat-via-rfc4231-anchored-hmac.md  0011-certverify-kat-via-rfc8032-anchored-ed25519.md  0012-certverify-context-string-uses-wire-version-npamp2.md  template.md
docs/: REGISTRATION-REQUEST.md  index.md  registries.md
formal/: README.md
harness/: CONFORMANCE-README.md  INSTRUCTIONS.md  README.md
harness/adapters/rust/: Cargo.toml
harness/adapters/rust/src/: main.rs
ietf/: draft-bubblefish-npamp-latest.md
impl/: README.md
impl/_packaging/python/: Cargo.toml  README.md  pyproject.toml
impl/_packaging/python/src/: lib.rs
impl/python/: QUICKSTART.md  npamp_vectors.py  pyproject.toml
impl/python/examples/: secure_record_layer.py
impl/python/npamp/: __init__.py  native_bodies.py
impl/python/test/: kat_aesgcm_wycheproof.py  kat_hkdf_wycheproof.py
impl/python/tests/: test_certverify_kat.py  test_conformance.py  test_finished_kat.py  test_handshake_flow_kat.py  test_key_schedule_kat.py  test_native_body_decode.py  test_transcript_kat.py
impl/rust/: Cargo.toml  QUICKSTART.md
impl/rust/examples/: interop_client.rs  interop_server.rs  secure_record_layer.rs
impl/rust/examples/support/: npamp_live.rs
impl/rust/src/: bodies.rs  lib.rs
impl/rust/tests/: conformance.rs  conformance_bodies.rs  handshake_flow_kat.rs  handshake_kat.rs  kem_wire_kat.rs
process/: NEP-0000-nep-process.md
registries/: aead.csv  bridge_protocol_ids.csv  channels.csv  frame_types_channel.csv  frame_types_reserved.csv  kem.csv  profiles.csv  signatures.csv  tlv_tags.csv
schema/: npamp-wire.cddl
scripts/: check-llms-txt.py  check-registries-doc.py  validate-frame-types-channel.py  validate-registries.py  validate-schemas.py  verify-pins.ps1
spec/: 01_alpn.md  02_frame_format.md  03_channels.md  04_frame_types.md  05_profiles.md  06_cryptographic_suites.md  07_tlv_registry.md  08_uri_scheme.md  09_extension_points.md  10_handshake_binding.md
test-vectors/: README.md
(+327 files in other folders)
