[project]
name = "npamp"
version = "0.1.0"
description = "Open reference implementation of N-PAMP (draft-bubblefish-npamp-00) wire format."
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["cryptography>=42"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
