[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "npamp-native"
version = "0.1.0"
description = "N-PAMP wire-format native extension (audited Rust core via PyO3, abi3 wheel)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "npamp_native"
# abi3 wheel (Py_LIMITED_API): one wheel works on CPython 3.9+, no per-version rebuilds.
features = ["pyo3/abi3-py39"]
